# scribble2

./: Cargo.toml  Dockerfile  config.default.yml  config.rs  config.yml
.github/workflows/: rust.yml
src/: config.rs  git.rs  indieauth.rs  lib.rs  main.rs  microformats.rs  micropub.rs  path_pattern.rs  telemetry.rs  util.rs
src/micropub/: auth.rs  error.rs  get.rs  post.rs  storage.rs
src/micropub/post/: common.rs  create.rs  delete.rs  form_data.rs  json.rs  media.rs  multipart.rs  undelete.rs  update.rs
src/micropub/storage/: job.rs
src/micropub/storage/job/: create.rs  source.rs  update.rs
