[package]
name = "scribble"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.9", features = ["json"] }
config = "0.15.22"
mime = "0.3.17"
multer = "3.1.0"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["form", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_urlencoded = "0.7.1"
tokio = { version = "1.52.1", features = ["full", "tracing"] }
tower-http = { version = "0.6.8", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
validator = { version = "0.20.0", features = ["derive"] }
