[package]
name = "scribble"
version = "0.1.0"
edition = "2024"

[dependencies]
async-tempfile = "0.7.0"
axum = { version = "0.8.9", features = ["json"] }
axum-extra = { version = "0.12.6", features = ["query"] }
chrono = "0.4.44"
config = "0.15.22"
futures = "0.3.32"
git2 = "0.20.4"
http-body-util = "0.1.3"
mime = "0.3.17"
multer = "3.1.0"
object_store = { version = "0.13.2", features = ["aws"] }
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["form", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_urlencoded = "0.7.1"
serde_valid = "2.0.1"
slug = "0.1.6"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["full", "tracing"] }
tower-http = { version = "0.6.8", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
uuid = { version = "1.23.1", features = ["v4"] }
validator = { version = "0.20.0", features = ["derive"] }
